tests/syntax/bad/testfile-expr8-1.scala
class A { def m() { var x = new 0; } }
object Main { def main(args: Array[String]) { } }
